fix: collapse and expand order details on admin side.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2889,7 +2889,7 @@ table .input-group-text {
 .foodorder-box .foodorder-box-details .footer-box-main .footer-main-total {
     border: 1px solid var(--theme-white3);
     border-radius: 10px;
-    padding: 15px 20px 30px;
+    padding: 15px 20px 20px;
     margin: 30px 0 0;
 }
 .foodorder-box .foodorder-box-details .footer-box-main .footer-main-total .footer-main-total-header {
@@ -3653,6 +3653,16 @@ nav .pagination {
 .items-list-order .orders_item .ord_item {margin-bottom: 8px;padding-bottom: 8px;border-bottom: 1px solid #dcdcdc;justify-content: space-between}
 .items-list-order .orders_item .ord_item:last-child {border-bottom: 0px}
 .orders_item .ord_item * {font-size: 14px !important;margin-bottom: 0px}
+
+
+.footer-box-main-orderlist-main.collapsed  {
+    display: none !important;
+}
+
+
+.footer-main-total-main.collapsed  {
+    display: none !important;
+}
 
 
 
